media-stack/qbittorrent.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
  labels:
    app: qbittorrent
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      automountServiceAccountToken: false
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest@sha256:b522f9f4b769f8f36d49d22d5eb6a92e9aa18904c6a1830b1439df511ec21983
          ports:
            - containerPort: 8080
              name: webui
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 2Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

      volumes:
        - name: dev-net
          hostPath:
            path: /dev/net
            type: DirectoryOrCreate
        - name: modules
          hostPath:
            path: /lib/modules
            type: Directory
        - name: config
          hostPath:
            path: /srv/appdata/qbittorrent
            type: DirectoryOrCreate
        - name: media
          hostPath:
            path: /mnt/hdd/media
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  type: ClusterIP
  selector:
    app: qbittorrent
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
